# markdown-downloader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  config.performance.toml  config.stable.toml  config.toml
src/: cli.rs  config.rs  config_file.rs  converter.rs  crawler.rs  error.rs  file_manager.rs  folder_manager.rs  lib.rs  links_manager.rs  main.rs  progress.rs  translator.rs  types.rs
