[package]
name = "markdown-downloader"
version = "0.1.0"
edition = "2024"

[lib]
name = "markdown_downloader"
path = "src/lib.rs"

[[bin]]
name = "markdown-downloader"
path = "src/main.rs"

[dependencies]
spider = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = "4.0"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
futures = "0.3"
